[package]
name = "demand-easy-sv2"
version = "0.6.0"
edition = "2021"
description = "abc"
license = "MIT OR Apache-2.0"


[dependencies]
tokio = {version="1.36.0",features = ["full","tracing"]}
stratum-common = { version="1.0.0" }
roles_logic_sv2 = { version="1.1.0"}
const_sv2 = { version="2.0.0"}
binary_sv2 = { version = "1.0.1"}
demand-sv2-connection = "0.0.4"
codec_sv2 = { version = "1.2.1", features = ["noise_sv2","with_buffer_pool"]}
key-utils = { version="1.1.0"}
#stratum-common = { version="1.0.0" , path = "../stratum/common"}
#roles_logic_sv2 = { version="1.1.0", path = "../stratum/protocols/v2/roles-logic-sv2" }
#const_sv2 = { version="1.0.0", path = "../stratum/protocols/v2/const-sv2"}
#binary_sv2 = { version = "1.0.0", path = "../stratum/protocols/v2/binary-sv2/binary-sv2"}
#demand-sv2-connection = {version="0.0.1", path = "../demand-sv2-connection" }
#codec_sv2 = { version = "1.0.1", path = "../stratum/protocols/v2/codec-sv2", features = ["noise_sv2","with_buffer_pool"]}
#key-utils = { version="1.0.0", path = "../stratum/utils/key-utils"}

[features]
with_serde = ["binary_sv2/with_serde", "roles_logic_sv2/with_serde", "codec_sv2/with_serde"]
